--- a/Note/note.tex
+++ b/Note/note.tex
@@ -94,7 +94,7 @@
 \label{sec:higgs_production}
     We want to apply deep learning methods to distinguish vector boson fusion (VBF) from gluon-gluon fusion (GGF) and Higgs production at the LHC.
 
-    We want to apply the CWoLa method, then we can use the real data without knowing the true label.
+    We want to apply the CWoLa method, so we can use the real data without knowing the true label.
 % section higgs_production (end)
 \section{Sample Preparation}% (fold)
 \label{sec:sample_preparation}
@@ -478,7 +478,7 @@
 % section different_cut_setting (end)
 \section{Supervised training}% (fold)
 \label{sec:supervised_training}
-    This section tests the supervised training on CNN. The training, validation, and testing sample size are summarized in table~\ref{tab:supervised_sample_size}. The events passing all selection requirements (section~\ref{sub:event_selection}) are considered.
+    This section tests the supervised training on CNN. The training, validation, and testing sample sizes are summarized in table~\ref{tab:supervised_sample_size}. The events passing all selection requirements (section~\ref{sub:event_selection}) are considered.
     \begin{table}[htbp]
         \centering
         \caption{Sizes of various samples used for supervised training.}
@@ -505,9 +505,9 @@
     \label{sub:testing_sample_in_sr_and_br}
         The testing events used to evaluate the table~\ref{tab:supervised_CNN_training_results} are all events passing the selection and not restricted to the particular SR. Thus, to make a fair comparison with previous results, we must evaluate the training performance on the events in SR and BR.
 
-        The new testing dataset consists of the 10,000 VBF and 10,000 GGF events from SR and BR. The number of SR and BR events are computed from table~\ref{tab:GGF_VBF_Higgs_cutflow_number_mixed_dataset_225_2.3}.
+        The new testing dataset consists of the 10,000 VBF and 10,000 GGF events from SR and BR. The numbers of SR and BR events are computed from table~\ref{tab:GGF_VBF_Higgs_cutflow_number_mixed_dataset_225_2.3}.
 
-        The training results of table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3} are re-evaluated on the new testing set and shown in table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3_new_test_set}. The results are better than the table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3}. It seems that the events in the BR can be distinguished better than those in SR.
+        The training results of table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3} are re-evaluated on the new testing set and shown in table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3_new_test_set}. The results are better than the table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3}. It seems that the events in the BR can be distinguished better than those in the SR.
     \begin{table}[htpb]
         \centering
         \caption{The CNN training results with $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of $m_{jj} > \text{225 GeV}$ and $\Delta\eta_{jj} > 2.3$ are applied.}
@@ -526,7 +526,7 @@
 \label{sec:use_jet_tagging_results_to_construct_mixed_datasets}
     This section uses the jet tagging results to construct the mixed datasets.
 
-    Assuming the luminosity of $\mathcal{L} = \text{3000 fb}^{-1}$, we can estimate the number of events belonging to the SR and BR. The SR and BR are defined based on the number of the gluon jets $n_g$ and quark jets $n_q$. The selection results are summarized in table~\ref{tab:number_of_event_in_mixed_dataset_gluon_jet}.
+    Assuming the luminosity of $\mathcal{L} = \text{3000 fb}^{-1}$, we can estimate the number of events belonging to the SR and BR. The SR and BR are defined based on the number of gluon jets $n_g$ and quark jets $n_q$. The selection results are summarized in table~\ref{tab:number_of_event_in_mixed_dataset_gluon_jet}.
 
     \begin{table}[htpb]
         \centering
@@ -555,12 +555,12 @@
         }
     \end{table}
 
-    For now, we use the truth information from \verb|Delphes| and do not consider the mis-tagging case.
+    For now, we use the true information from \verb|Delphes| and do not consider the mis-tagging case.
 
-    The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging}. All different jet-tagging conditions produced similar performance. However, the results are worse than the ones of kinematic cuts (table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3_new_test_set}).
+    The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging}. All different jet-tagging conditions produced similar performance. However, the results are worse than those of kinematic cuts (table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3_new_test_set}).
     \begin{table}[htpb]
         \centering
-        \caption{The CNN training results with $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
+        \caption{The CNN training results with $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training.}
         \label{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging}
         \begin{tabular}{l|cc|cc}
                                          & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
@@ -574,7 +574,7 @@
     The training results without $p_{\text{T}}$ nomalization are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging}. All different jet-tagging conditions produced similar performance. However, the results are worse than the ones with $p_{\text{T}}$ normalization (table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging}) by 2\%.
     \begin{table}[htpb]
         \centering
-        \caption{The CNN training results without $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
+        \caption{The CNN training results without $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training.}
         \label{tab:CWoLa_CNN_training_results_3000_jet_tagging}
         \begin{tabular}{l|cc|cc}
                                          & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
@@ -587,12 +587,12 @@
 
     \subsection{Loss weighted}% (fold)
     \label{sub:loss_weighted}
-        Since the sample sizes are unbablanced, we add the class weighted. The weights are propotional to the reciprocal of number of events.
+        Since the sample sizes are unbalanced, we add the class weights. The weights are proportional to the reciprocal of the number of events.
 
-        The training results with class weighted are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_weighted_loss}. All different jet-tagging conditions produced similar performance.
+        The training results with class weights are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_weighted_loss}. All different jet-tagging conditions produced similar performance.
     \begin{table}[htpb]
         \centering
-        \caption{The CNN training results without $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
+        \caption{The CNN training results without $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training.}
         \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_weighted_loss}
         \begin{tabular}{l|cc|cc}
                                          & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
@@ -606,16 +606,16 @@
 % section use_jet_tagging_results_to_construct_mixed_datasets (end)
 \section{Total scaling of transverse momentum}% (fold)
 \label{sec:total_scaling_of_transverse_momentum}
-    The $p_{\text{T}}$ normalization remove the magnitude information of the input datasets. Thus, we would expect the training performance of the $p_{\text{T}}$ normalization datasets would be worse than the one without it. However, table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging} and \ref{tab:CWoLa_CNN_training_results_3000_jet_tagging} shows the opposite results.
+    The $p_{\text{T}}$ normalization removes the magnitude information of the input datasets. Thus, we would expect the training performance of the $p_{\text{T}}$ normalization datasets would be worse than the one without it. However, table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging} and \ref{tab:CWoLa_CNN_training_results_3000_jet_tagging} shows the opposite results.
 
-    To explore the reason why the $p_\text{T}$ normalization could improve the training performance, we try the total $p_{\text{T}}$ scaling, which computes the mean and statard deviation of all input samples. Then, use these values to standardize the input datasets.
+    To explore the reason why the $p_\text{T}$ normalization could improve the training performance, we try the total $p_{\text{T}}$ scaling, which computes the mean and standard deviation of all input samples. Then, use these values to standardize the input datasets.
 
     \subsection{Results}% (fold)
     \label{sub:results}
         The training results with $p_{\text{T}}$ scaling are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_pT_scaling}. All different jet-tagging conditions produced similar performance. However, the results are worse than the ones with $p_{\text{T}}$ normalization (table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging}).
         \begin{table}[htpb]
             \centering
-            \caption{The CNN training results with $p_{\text{T}}$ scaling technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
+            \caption{The CNN training results with $p_{\text{T}}$ scaling technique. The ACC and AUC are evaluated based on 10 training. The selection cuts on the number of gluon jets are applied.}
             \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_pT_scaling}
             \begin{tabular}{l|cc|cc}
                                              & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
@@ -629,7 +629,7 @@
         The training results with $p_{\text{T}}$ normalization are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_w_pT_norm}. 
         \begin{table}[htpb]
             \centering
-            \caption{The CNN training results with $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
+            \caption{The CNN training results with $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts on the number of gluon jets are applied.}
             \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_w_pT_norm}
             \begin{tabular}{l|cc|cc}
                                              & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
@@ -643,7 +643,7 @@
         The training results without $p_{\text{T}}$ normalization are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_wo_pT_norm}. 
         \begin{table}[htpb]
             \centering
-            \caption{The CNN training results without $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
+            \caption{The CNN training results without $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts on the number of gluon jets are applied.}
             \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_wo_pT_norm}
             \begin{tabular}{l|cc|cc}
                                              & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
@@ -659,11 +659,11 @@
 % section total_scaling_of_transverse_momentum (end)
 \section{Data augmentation}% (fold)
 \label{sec:data_augmentation}
-    To improve the training performance, we consider the various data augmentation methods.
+    To improve the training performance, we will consider various data augmentation methods.
 
     \subsection{\texorpdfstring{$p_{\mathrm{T}}$}{pT} smearing}% (fold)
     \label{sub:pt_smearing}
-        The $p_{\text{T}}$ smearing method is used to simulate detector resolution effects on the transverse momentum of event constituents. This method resamples the transverse momentum $p_{\text{T}}$ of event constituents according to the normal distribution:
+        The $p_{\text{T}}$ smearing method simulates detector resolution effects on the transverse momentum of event constituents. This method resamples the transverse momentum $p_{\text{T}}$ of event constituents according to the normal distribution:
             \begin{equation}
                 p_{\text{T}}' \sim \mathcal{N}\left( p_{\text{T}}, f(p_{\text{T}}) \right), \quad f(p_{\text{T}}) = \sqrt{0.052 p_{\text{T}}^2 + 1.502p_{\text{T}}},
             \end{equation}
@@ -672,22 +672,61 @@
             The training results of the $2q0g$ datasets (Table~\ref{tab:number_of_event_in_mixed_dataset_gluon_jet} (a)) are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_pT_aug_5_10}. 
         \begin{table}[htpb]
             \centering
-            \caption{The CNN training results with different augmentation size. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
+            \caption{CNN training results with different augmentation sizes. The ACC and AUC are evaluated based on 10 training.}
             \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_pT_aug_5_10}
             \begin{tabular}{l|cc|cc}
                          & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
                 Datasets & ACC               & AUC               & ACC               & AUC               \\ \hline
                 Original & $0.615 \pm 0.005$ & $0.632 \pm 0.007$ & $0.650 \pm 0.011$ & $0.703 \pm 0.015$ \\
                 +5       & $0.625 \pm 0.006$ & $0.653 \pm 0.009$ & $0.661 \pm 0.010$ & $0.714 \pm 0.012$ \\
-                +10      & $0.629 \pm 0.005$ & $0.658 \pm 0.005$ & $0.666 \pm 0.008$ & $0.721 \pm 0.009$
+                +10      & $0.629 \pm 0.005$ & $0.658 \pm 0.005$ & $0.666 \pm 0.008$ & $0.721 \pm 0.009$ \\
+                +15      & $0.629 \pm 0.003$ & $0.660 \pm 0.003$ & $0.661 \pm 0.015$ & $0.710 \pm 0.018$
             \end{tabular}
         \end{table}
     % subsection pt_smearing (end)
-    % \subsection{\texorpdfstring{$\phi$}{phi} shifting}% (fold)
-    % \label{sub:phi_shifting}
-    %     
-    % % subsection phi_shifting (end)
+    \subsection{\texorpdfstring{$\phi$}{phi} shifting}% (fold)
+    \label{sub:phi_shifting}
+        The $\phi$ shifting method shifts entire events by a random angle $\Delta\phi \in [-\pi, \pi]$ to enlarge the diversity of training datasets.
 
+        The training results of the $2q0g$ datasets are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_phi_aug_5_10_15}. 
+        \begin{table}[htpb]
+            \centering
+            \caption{CNN training results with different augmentation sizes. The ACC and AUC are evaluated based on 10 training.}
+            \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_phi_aug_5_10_15}
+            \begin{tabular}{l|cc|cc}
+                         & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+                Datasets & ACC               & AUC               & ACC               & AUC               \\ \hline
+                Original & $0.615 \pm 0.005$ & $0.632 \pm 0.007$ & $0.650 \pm 0.011$ & $0.703 \pm 0.015$ \\
+                +5       & $0.641 \pm 0.003$ & $0.680 \pm 0.004$ & $0.683 \pm 0.010$ & $0.736 \pm 0.013$ \\
+                +10      & $0.642 \pm 0.006$ & $0.684 \pm 0.008$ & $0.686 \pm 0.008$ & $0.739 \pm 0.011$ \\
+                +15      & $0.643 \pm 0.005$ & $0.685 \pm 0.006$ & $0.687 \pm 0.009$ & $0.742 \pm 0.010$
+            \end{tabular}
+        \end{table} 
+    % subsection phi_shifting (end)
+    \subsection{\texorpdfstring{$\eta-\phi$}{eta-phi} smearing}% (fold)
+    \label{sub:eta_phi_smearing}
+        We apply the $\eta-\phi$ smearing on the training samples. Specifically, the $\left( \eta,\phi \right) $ coordinates of constituents are resampled according to a normal distribution centered on the original coordinate and with a standard deviation inversely proportional to the $p_{\text{T}}$
+        \begin{equation}
+            \eta' \sim \mathcal{N}\left(\eta, \frac{\Lambda}{p_{\text{T}}}\right), \quad \phi' \sim \mathcal{N}\left(\phi, \frac{\Lambda}{p_{\text{T}}}\right)
+        \end{equation}
+        where $\eta', \phi'$ are the augmented coordinates, $p_{\text{T}}$ is the transverse momentum of the constituent, and the smearing scale is set to be $\Lambda = \text{100 MeV}$.
+
+        The training results on the $2q0g$ datasets are summarized in Table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_eta_phi_aug_5_10_15}. The +5 and +10 augmentation cases show performance comparable to the original dataset. However, applying +15 augmentations degrades the performance, suggesting that introducing too many augmented samples may lead the training in the wrong direction.
+        \begin{table}[htpb]
+            \centering
+            \caption{CNN training results with different augmentation sizes. The ACC and AUC are evaluated based on 10 training.}
+            \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_eta_phi_aug_5_10_15}
+            \begin{tabular}{l|cc|cc}
+                         & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+                Datasets & ACC               & AUC               & ACC               & AUC               \\ \hline
+                Original & $0.615 \pm 0.005$ & $0.632 \pm 0.007$ & $0.650 \pm 0.011$ & $0.703 \pm 0.015$ \\
+                +5       & $0.618 \pm 0.004$ & $0.640 \pm 0.006$ & $0.658 \pm 0.009$ & $0.711 \pm 0.013$ \\
+                +10      & $0.617 \pm 0.004$ & $0.641 \pm 0.006$ & $0.654 \pm 0.010$ & $0.705 \pm 0.012$ \\
+                +15      & $0.612 \pm 0.006$ & $0.628 \pm 0.008$ & $0.635 \pm 0.009$ & $0.679 \pm 0.013$
+            \end{tabular}
+        \end{table}
+    % subsection eta_phi_smearing (end)
+    
 % section data_augmentation (end)
 \bibliographystyle{ieeetr}
 \bibliography{reference}
