--- a/Note/note.tex
+++ b/Note/note.tex
@@ -1169,8 +1169,8 @@
         \end{table}
         The training performance is almost the same, suggesting that the model can still extract discriminative features from the jet pattern alone.
     % subsection remove_photon_information_with_event_cnn (end)
-    \subsection{Larger training set with event-CNN}% (fold)
-    \label{sub:larger_training_set_with_event_cnn}
+    \subsection{Various training size with event-CNN}% (fold)
+    \label{sub:various_training_size_with_event_cnn}
         We also study the effect of dataset size on the model's performance. The event-CNN is trained using the $2q0g$ datasets corresponding to different integrated luminosities, while keeping photon information included. The results are summarized in table~\ref{tab:CWoLa_event_CNN_training_results_3000_jet_tagging_L_3000_12000}.
         \begin{table}[htpb]
             \centering
@@ -1179,12 +1179,15 @@
             \begin{tabular}{l|cc|cc}
                                         & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
                 Luminosity (fb$^{-1}$)  & ACC               & AUC               & ACC               & AUC               \\ \hline
+                300                     & $0.610 \pm 0.015$ & $0.589 \pm 0.036$ & $0.606 \pm 0.033$ & $0.641 \pm 0.045$ \\
+                900                     & $0.625 \pm 0.007$ & $0.628 \pm 0.009$ & $0.660 \pm 0.014$ & $0.715 \pm 0.018$ \\
+                1800                    & $0.625 \pm 0.010$ & $0.644 \pm 0.019$ & $0.674 \pm 0.009$ & $0.732 \pm 0.012$ \\
                 3000                    & $0.624 \pm 0.011$ & $0.644 \pm 0.021$ & $0.679 \pm 0.009$ & $0.739 \pm 0.012$ \\
                 12000                   & $0.655 \pm 0.002$ & $0.701 \pm 0.003$ & $0.683 \pm 0.004$ & $0.742 \pm 0.005$
             \end{tabular}
         \end{table}
-        The performance improved with increased dataset size in the $M_1 / M_2$ scenario. However, for the pure datasets, the training performance is almost the same.
-    % subsection larger_training_set_with_event_cnn (end)
+        The performance improved with increased dataset size. For the pure datasets, the training performance is saturated after $3000 \text{ fb}^{-1}$.
+    % subsection various_training_size_with_event_cnn (end)
 % section event_cnn (end)
 
 
