--- a/Note/note.tex
+++ b/Note/note.tex
@@ -1171,11 +1171,11 @@
     % subsection remove_photon_information_with_event_cnn (end)
     \subsection{Various training size with event-CNN}% (fold)
     \label{sub:various_training_size_with_event_cnn}
-        We also study the effect of dataset size on the model's performance. The event-CNN is trained using the $2q0g$ datasets corresponding to different integrated luminosities, while keeping photon information included. The results are summarized in table~\ref{tab:CWoLa_event_CNN_training_results_3000_jet_tagging_L_3000_12000}.
+        We also study the effect of dataset size on the model's performance. The event-CNN is trained using the $2q0g$ datasets corresponding to different integrated luminosities, while keeping photon information included. The results are summarized in table~\ref{tab:CWoLa_event_CNN_training_results_jet_tagging_various_L}.
         \begin{table}[htpb]
             \centering
             \caption{Event-CNN training results with different dataset sizes corresponding to various luminosities. Each model is trained with photon information included. The ACC and AUC are evaluated over 10 training runs.}
-            \label{tab:CWoLa_event_CNN_training_results_3000_jet_tagging_L_3000_12000}
+            \label{tab:CWoLa_event_CNN_training_results_jet_tagging_various_L}
             \begin{tabular}{l|cc|cc}
                                         & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
                 Luminosity (fb$^{-1}$)  & ACC               & AUC               & ACC               & AUC               \\ \hline
@@ -1188,6 +1188,37 @@
         \end{table}
         The performance improved with increased dataset size. For the pure datasets, the training performance is saturated after $3000 \text{ fb}^{-1}$.
     % subsection various_training_size_with_event_cnn (end)
+    \subsection{\texorpdfstring{$H \to ZZ^* \to 4\ell$}{H to ZZ to 4l} channel}% (fold)
+    \label{sub:h_to_zz_to_4l_channel}
+        We follow the same setup as described in section~\ref{sec:h_to_zz_to_4l_channel}. For CWoLa training, we consider multiple luminosity scenarios. In the case of $\mathcal{L} = \text{3000 fb}^{-1}$, the number of events in the mixed datasets is shown in table~\ref{tab:number_of_event_in_mixed_dataset_gluon_jet_ZZ4l}.
+        
+        The event-CNN training results are summarized in table~\ref{tab:CWoLa_event_CNN_training_results_jet_tagging_ZZ4l_L_3000_30000}. At $\mathcal{L} = \text{3000 fb}^{-1}$, the ACC and AUC are close to 0.5, indicating that the training is nearly ineffective. However, as the training dataset size increases to $\mathcal{L} = \text{30000 fb}^{-1}$, the AUC for the pure dataset improves significantly, reaching values around 0.8. This highlights the importance of dataset size.
+        \begin{table}[htpb]
+            \centering
+            \caption{Event-CNN training results using datasets corresponding to different luminosities. The $ZZ \to 4\ell$ decay channel is considered, with decay product information included. ACC and AUC are averaged over 10 training runs.}
+            \label{tab:CWoLa_event_CNN_training_results_jet_tagging_ZZ4l_L_3000_30000}
+            \begin{tabular}{l|cc|cc}
+                                        & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+                Luminosity (fb$^{-1}$)  & ACC               & AUC               & ACC               & AUC               \\ \hline
+                3000                    & $0.575 \pm 0.012$ & $0.508 \pm 0.039$ & $0.538 \pm 0.026$ & $0.543 \pm 0.035$ \\
+                30000                   & $0.601 \pm 0.010$ & $0.621 \pm 0.012$ & $0.732 \pm 0.018$ & $0.800 \pm 0.023$
+            \end{tabular}
+        \end{table}
+
+        To assess the contribution of decay products to model performance, we train the event-CNN on the $\mathcal{L} = \text{30000 fb}^{-1}$ dataset with all lepton-related information removed. Since lepton signals can appear in both Tower and Track channels, we mask the corresponding pixels by setting them to zero in both inputs. The results are shown in table~\ref{tab:CWoLa_event_CNN_training_results_30000_jet_tagging_ZZ4l_case5}.
+        \begin{table}[htpb]
+            \centering
+            \caption{Event-CNN training results after removing all decay product information. ACC and AUC are averaged over 10 training runs.}
+            \label{tab:CWoLa_event_CNN_training_results_30000_jet_tagging_ZZ4l_case5}
+            \begin{tabular}{l|cc|cc}
+                           & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+                Datasets   & ACC               & AUC               & ACC               & AUC               \\ \hline
+                Original   & $0.601 \pm 0.010$ & $0.621 \pm 0.012$ & $0.732 \pm 0.018$ & $0.800 \pm 0.023$ \\
+                w/o lepton & $0.606 \pm 0.010$ & $0.626 \pm 0.012$ & $0.645 \pm 0.006$ & $0.697 \pm 0.009$
+            \end{tabular}
+        \end{table}
+        The performance is worse by 10\% for pure events when lepton information is removed, indicating that some of the discriminative features are removed.
+    % subsection h_to_zz_to_4l_channel (end)
 % section event_cnn (end)
 
 
